Encoding the path variables.